--- a/app/src/main/res/layout/layout_dialog_login.xml
+++ b/app/src/main/res/layout/layout_dialog_login.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
+    android:background="@android:color/transparent"
     android:layout_height="300dp">
 
     <ImageView
@@ -21,10 +22,48 @@
         android:layout_width="match_parent"
         android:layout_height="250dp">
         <androidx.cardview.widget.CardView
+            app:cardBackgroundColor="#EEEBEF"
+            app:cardElevation="5dp"
             app:cardCornerRadius="5dp"
-            app:cardBackgroundColor="#f20"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="bottom"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/editTextUserName"
+                    android:text="User name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <EditText
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/editTextPassword"
+                    android:text="Password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:layout_marginRight="100dp"
+                        android:text="Cancel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Button
+                        android:text="Login"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
